--- a/Landing Page/landing_1/index.html
+++ b/Landing Page/landing_1/index.html
@@ -35,9 +35,14 @@
             .clear {
                 clear: both;
             }
-            @media only screen and (max-width: 320px) {
+            @media only screen and (max-width: 1150px) {
                 .hero-area h1 {
-                    font-size: 2em !important;
+                    font-size: 30px !important;
+                }
+            }
+            @media only screen and (max-width: 1150px) {
+                .heading h2 {
+                    font-size: 25px !important;
                 }
             }
         </style>
