--- a/Landing Page/landing_1/index.html
+++ b/Landing Page/landing_1/index.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="css/responsive.css?3">
         <link rel="stylesheet" href="fonts/flaticon.css">
 
+        <!-------------- Changes Begin-------------->
         <style type="text/css">
             .clear {
                 clear: both;
@@ -42,10 +43,37 @@
             }
             @media only screen and (max-width: 1150px) {
                 .heading h2 {
-                    font-size: 25px !important;
+                    font-size: 23px !important;
                 }
             }
+            @media only screen and (max-width: 800px) {
+                .hero-area .btn-main {
+                    display: block;
+                }
+            }
+            @media only screen and (max-width: 1000px) {
+                .chi-siamo .row .col-sm-12 {
+                    margin-bottom: 40px;
+                    margin-left: 50px;
+                }
+            }
+            @media only screen and (max-width: 700px) {
+                .chi-siamo .row .col-sm-12 {
+                    margin-left: 5px;
+                }
+            }
+            .chi-siamo .row .author-details img {
+                margin-bottom: 10px;
+            }
+            .promo-details .row ul li {
+                margin-bottom: 45px;
+            }
+            .promo-details .row ul li img {
+                margin-right: 15px;
+            }
         </style>
+        <!-------------- Changes End-------------->
+
     </head>
 
     <body id="body">
@@ -166,12 +194,12 @@ i tuoi dati genetici sono codificati attraverso un protocollo sicuro.</p>
                         <div class="content mt-100">
                             <h2 class="subheading">Cosa ti aiutiamo a scoprire?</h2>
                             <ul>
-                                <li><img src="img/carbs.png">Metabolismo dei carboidrati</li>
-                                <li><img src="img/fat.png">Metabolismo dei grassi</li>
-                                <li><img src="img/milk.png">Intolleraza al lattosio</li>
-                                <li><img src="img/caffein.png">Sensibilità alla caffeina<li>
-                                <li><img src="img/celiachia.png">Celiachia</li>
-                                <li><img src="img/ill.png">Predisposizione alle malattie del metabolismo alimentare</li>
+                                <li><img src="images/carbs.png">Metabolismo dei carboidrati</li>
+                                <li><img src="images/fat.png">Metabolismo dei grassi</li>
+                                <li><img src="images/milk.png">Intolleraza al lattosio</li>
+                                <li><img src="images/caffein.png">Sensibilità alla caffeina<li>
+                                <li><img src="images/celiachia.png">Celiachia</li>
+                                <li><img src="images/ill.png">Predisposizione alle malattie del metabolismo alimentare</li>
                             </ul>
                            
                         </div>
