--- a/Landing Page/landing_1/index.html
+++ b/Landing Page/landing_1/index.html
@@ -71,6 +71,11 @@
             .promo-details .row ul li img {
                 margin-right: 15px;
             }
+            @media only screen and (max-width: 1000px) {
+                .row .testimonial-block .author-details img {
+                    width: 100%;
+                }
+            }
         </style>
         <!-------------- Changes End-------------->
 
