--- a/Landing Page/landing_1/index.html
+++ b/Landing Page/landing_1/index.html
@@ -73,9 +73,9 @@
             }
             @media only screen and (max-width: 1000px) {
                 .row .testimonial-block .author-details img {
-                    width: 100%;
+                    width: 100% !important;
                 }
-            } 
+            }
         </style>
         <!-------------- Changes End-------------->
 
